Fix extra items dark mode styling.

--- a/docs/.vuepress/theme/styles/dark.pcss
+++ b/docs/.vuepress/theme/styles/dark.pcss
@@ -219,8 +219,13 @@
     }
   }
 
-  a.sidebar-link {
+  a.sidebar-link,
+  .sidebar-extra-item {
     @apply text-gray-500;
+  }
+
+  .sidebar-extra-top {
+    border-color: rgba(45, 55, 72, 1);
   }
 
   .left-bar-bottom {
